remove contact info since wlu is taking ownership

--- a/cgifiles/janus.html
+++ b/cgifiles/janus.html
@@ -58,7 +58,7 @@ Output:&nbsp;&nbsp;&nbsp;
 </table>
 
 <br><br>
-<p align=center>If you have any problems with this search engine, please contact arkane (at) uwaterloo.ca
+<p align=center>
 </body>
 </html>
 
